--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -61,33 +61,33 @@
 \newacronym{nop}{NOP}{no-operation}
 
 % timer and performance counting csrs
-\newacronym{mtime}{mtime}{machine time register}
-\newacronym{mtimecmp}{mtimecmp}{machine time compare register}
-\newacronym{mcycle}{mcycle}{machine cycle counter register}
-\newacronym{minstret}{minstret}{machine retired instructions counter register}
-\newacronym{mhpmcountern}{mhpmcounter$n$}{machine event counter register}
-\newacronym{mhpmeventn}{mhpmevent$n$}{machine event selector register}
-\newacronym{mcounteren}{mcounteren}{machine counter-enable register}
+\newacronym{mtime}{mtime}{machine time}
+\newacronym{mtimecmp}{mtimecmp}{machine time compare}
+\newacronym{mcycle}{mcycle}{machine cycle counter}
+\newacronym{minstret}{minstret}{machine retired instructions counter}
+\newacronym{mhpmcountern}{mhpmcounter$n$}{machine event counter}
+\newacronym{mhpmeventn}{mhpmevent$n$}{machine event selector}
+\newacronym{mcounteren}{mcounteren}{machine counter-enable}
 
 % trap handling csrs
-\newacronym{mstatus}{mstatus}{machine status register}
-\newacronym{mtvec}{mtvec}{machine trap-vector base-address register}
-\newacronym{mip}{mip}{machine interrupt pending register}
-\newacronym{mie}{mie}{machine interrupt enable register}
-\newacronym{mscratch}{mscratch}{machine scratch register}
+\newacronym{mstatus}{mstatus}{machine status}
+\newacronym{mtvec}{mtvec}{machine trap-vector base-address}
+\newacronym{mip}{mip}{machine interrupt pending}
+\newacronym{mie}{mie}{machine interrupt enable}
+\newacronym{mscratch}{mscratch}{machine scratch}
 \newacronym{mepc}{mepc}{machine exception program counter}
-\newacronym{mcause}{mcause}{machine cause register}
+\newacronym{mcause}{mcause}{machine cause}
 \newacronym{mtval}{mtval}{machine trap value}
-\newacronym{medeleg}{medeleg}{machine exception delegation register}
-\newacronym{mideleg}{mideleg}{machine interrupts delegation register}
+\newacronym{medeleg}{medeleg}{machine exception delegation}
+\newacronym{mideleg}{mideleg}{machine interrupts delegation}
 
-\newacronym{ustatus}{ustatus}{user status register}
-\newacronym{uip}{uip}{user interrupt pending register}
-\newacronym{uie}{uie}{user interrupt enable register}
-\newacronym{utvec}{utvec}{user trap-vector base-address register}
-\newacronym{uscratch}{uscratch}{user scratch register}
+\newacronym{ustatus}{ustatus}{user status}
+\newacronym{uip}{uip}{user interrupt pending}
+\newacronym{uie}{uie}{user interrupt enable}
+\newacronym{utvec}{utvec}{user trap-vector base-address}
+\newacronym{uscratch}{uscratch}{user scratch}
 \newacronym{uepc}{uepc}{user exception program counter}
-\newacronym{ucause}{ucause}{user cause register}
+\newacronym{ucause}{ucause}{user cause}
 \newacronym{utval}{utval}{user trap value}
 
 \title{Securing an Architecture \\ \large{Applying Information Flow Control Policie to an Architectural Specification}}
