thesis: Add more empty structure to the thesis

--- a/thesis/sections/background.tex
+++ b/thesis/sections/background.tex
@@ -8,6 +8,12 @@
 
 \subsubsection{RISC-V}
 
+\subsection{Processor Vulnerabilities}
+
+\subsubsection{Processors and their Ecosystem}
+
+\subsubsection{Common Attack Vectors}
+
 \subsection{Information Flow Control}
 
 \subsection{Model Checking}
