--- a/thesis/sections/model.tex
+++ b/thesis/sections/model.tex
@@ -1,2 +1,10 @@
 \section{Model}
 \label{sec:model}
+
+\subsection{The MINRV8 Architecture}
+
+\subsection{Implementation of MINRV8 in nuXmv}
+
+\subsection{Scope of the Model}
+
+\subsection{Trustworthiness of the Model}
