--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -138,6 +138,8 @@
 \input{sections/risc-v.tex}
 \input{sections/model.tex}
 \input{sections/checking.tex}
+\input{sections/results.tex}
+\input{sections/conclusion.tex}
 
 \bibliography{references}
 \bibliographystyle{alpha}
