thesis: Start page numbering after table of contents

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -132,6 +132,11 @@
 \newpage
 
 \tableofcontents
+\thispagestyle{empty}
+
+\newpage
+
+\setcounter{page}{1}
 
 \input{sections/introduction.tex}
 \input{sections/background.tex}
