thesis: Add first draft of an introduction to the MINRV8 architecture

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -113,3 +113,11 @@
     ee        = {http://dx.doi.org/10.1007/978-3-319-08867-9_22},
     bibsource = {DBLP, http://dblp.uni-trier.de}
 }
+
+@manual{IntelSystemProgramming,
+    title = {Intel\textsuperscript{\textregistered} 64 and IA-32 Architectures Software Developer's Manual Volume 3 (3A, 3B, 3C \& 3D): System Programming Guide},
+    note = {Order Number: 325384-060US},
+    organization = {Intel},
+    month = {September},
+    year = {2016}
+}
