--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -52,6 +52,8 @@
 \newacronym{rsa}{RSA}{Rivest–Shamir–Adleman}
 \newacronym{nmi}{NMI}{non-maskable interrupt}
 \newacronym{alu}{ALU}{arithmetic logic unit}
+\newacronym{pma}{PMA}{phsyical memory attribute}
+\newacronym{pmp}{PMP}{physical memory protection}
 
 \newacronym{jal}{JAL}{jump and link}
 \newacronym{jalr}{JALR}{jump and link register}
@@ -91,6 +93,8 @@
 \newacronym{ucause}{ucause}{user cause}
 \newacronym{utval}{utval}{user trap value}
 
+\newacronym{pmpcfg}{pmpcfg}{phsyical memory protection configuration}
+\newacronym{pmacfg}{pmacfg}{phsyical memory attributes configuration}
 
 \sloppy
 
