--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -63,7 +63,7 @@
 \newacronym{uret}{URET}{user trap return}
 \newacronym{nop}{NOP}{no-operation}
 
-% timer and performance counting csrs
+% timer and performance counting CSRs
 \newacronym{mtime}{mtime}{machine time}
 \newacronym{mtimecmp}{mtimecmp}{machine time compare}
 \newacronym{mcycle}{mcycle}{machine cycle counter}
@@ -72,7 +72,7 @@
 \newacronym{mhpmeventn}{mhpmevent$n$}{machine event selector}
 \newacronym{mcounteren}{mcounteren}{machine counter-enable}
 
-% trap handling csrs
+% trap handling CSRs
 \newacronym{mstatus}{mstatus}{machine status}
 \newacronym{mtvec}{mtvec}{machine trap-vector base-address}
 \newacronym{mip}{mip}{machine interrupt pending}
